# my-editor

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
public/dicts/: basic.json  programmer.json
src/: App.tsx  codemirror-latex.ts  main.tsx  styles.css  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  search.rs  typst_compiler.rs
src-tauri/src/commands/: io.rs  markdown.rs  mod.rs  search.rs  typst.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/filesystem/: commands.rs  models.rs
src-tauri/src/features/markdown/: commands.rs
src-tauri/src/features/search/: commands.rs  mod.rs  models.rs  service.rs
src-tauri/src/features/typst/: commands.rs  compiler.rs  mod.rs
src/components/: CodeSnap.tsx  EditorGroup.tsx  MinimapView.tsx  Sidebar.tsx  StatusBar.tsx
src/components/editor/: EditorBreadcrumbs.tsx  EditorEmptyState.tsx  EditorTabs.tsx
src/components/layout/: LayoutRenderer.tsx
src/components/previews/: ExcalidrawEditor.tsx  GenericPreview.tsx  LatexPreview.tsx  MarkdownPreview.tsx  MermaidPreview.tsx  PreviewActions.tsx  TypstPreview.tsx
src/components/sidebar/: ExplorerPane.tsx  NewItemInput.tsx  OutlinePane.tsx  SearchPane.tsx  SearchResultItem.tsx  SidebarItem.tsx  TypingPane.tsx  WorkspacesPane.tsx
src/config/: editor.ts
src/features/documents/: types.ts
src/features/editor/: types.ts
src/features/settings/: types.ts
src/features/sidebar/: types.ts
src/features/translate/: index.ts  types.ts
src/hooks/: useDocuments.ts  useEditorGroups.ts  useEditorViewState.ts  useLayoutResizing.ts  useOutline.ts  useSearch.ts  useSidebar.ts  useWorkspace.ts
src/layout/: MainLayout.tsx  TitleBar.tsx
src/shared/components/: ContributionGraph.tsx  GhostResizeHandle.tsx
src/shared/hooks/: useResponsiveScale.ts
src/styles/: index.css  print.css
src/types/: shared.ts
src/utils/: languageManager.ts  layoutUtils.ts  selectionHighlight.ts
(+80 files in other folders)
